# RType

./: .gitignore  CMakeLists.txt  README.md  StartUML.mdj  compile.sh  conanfile.txt
Client/: CMakeLists.txt  a.out  client  compile.sh
Client/Inc/: Core.hpp  EventHandler.hpp  Game.hpp  KeyPressHandler.hpp  Menu.hpp  UDPClient.hpp
Client/Src/: Core.cpp  Game.cpp  Main.cpp  Menu.cpp  Textures.cpp
Documentation/: Doxyfile  rfc-style-UDP-protocol-documentation-for-RType.txt
Server/: CMakeLists.txt  Server.py
Server/GameEngine/: CMakeLists.txt  Engine.cpp
Server/GameEngine/ECS/: README.md
Server/GameEngine/ECS/Components/: CComponent.hpp
Server/GameEngine/ECS/Components/Include/: AComponent.hpp  CDamage.hpp  CDirection.hpp  CHealth.hpp  CLevel.hpp  CPlayer.hpp  CPosition.hpp  CShoot.hpp  CSpeed.hpp  CSprite.hpp  CTeam.hpp  CTimer.hpp  ComponentManager.hpp
Server/GameEngine/ECS/Components/Src/: AComponent.cpp  CDamage.cpp  CDirection.cpp  CHealth.cpp  CLevel.cpp  CPlayer.cpp  CPosition.cpp  CShoot.cpp  CSpeed.cpp  CSprite.cpp  CTeam.cpp  CTimer.cpp  ComponentManager.cpp
Server/GameEngine/ECS/Entities/: AEntity.cpp  AEntity.hpp  EntityManager.cpp  EntityManager.hpp
Server/GameEngine/ECS/Interface/: IComponent.hpp  IEntity.hpp  ISystem.hpp
Server/GameEngine/ECS/Systems/: ASystem.cpp  ASystem.hpp  SCollision.cpp  SCollision.hpp  SDeath.cpp  SDeath.hpp  SLevel.cpp  SLevel.hpp  SMapBorder.cpp  SMapBorder.hpp  SMove.cpp  SMove.hpp  SPlayerConnection.cpp  SPlayerConnection.hpp  SSendSprites.cpp  SSendSprites.hpp  SShot.cpp  SShot.hpp  SystemManager.cpp  SystemManager.hpp
Server/GameEngine/ECS/Utils/: Direction.hpp  RandomInt.hpp  Vector.hpp
Server/GameEngine/ECS/World/: World.cpp  World.hpp
Server/Inc/: NetworkHandler.hpp  PlayerDatum.hpp  UDPServer.hpp
Server/Src/: Main.cpp  UDPServer.cpp
Server/tmp/: CCollision.cpp  CCollision.hpp  CDamaging.hpp  CJoystick.hpp  CMovable.cpp  CMovable.hpp  CPosition.cpp  CPosition.hpp
Shared/Inc/: Packet.hpp  PacketCreator.hpp  PacketUnpacker.hpp  Textures.hpp
